@@ -30,6 +30,7 @@
 	Fixed issues with TRY/CATCH
 	Fixed using POINT to retrieve IMAGE data
 	Fixed issues with CHAIN
+	Fixed TLOAD to work correctly with TRY/CATCH
 
 2016-02-11
 	Added export to mobile command (SDL)
